--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack": "^3.5.6"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/saurishkar/reactjstraining.git"
